--- a/client/css/main.css
+++ b/client/css/main.css
@@ -435,14 +435,14 @@ input:checked + .slider:before {
 }
 
 .sidebar .list {
-    padding: 30px 0;
+    padding-top: 10px;
 }
 
 .sidebar .list .dialogs ul {
     display: grid;
     list-style: none;
-    height: -webkit-calc(100vh - 30px - 65px - 75px - 65px - 60px);
-    height: calc(100vh - 30px - 65px - 75px - 65px - 60px);
+    height: -webkit-calc(100vh - 30px - 65px - 75px - 65px - 60px + 55px);
+    height: calc(100vh - 30px - 65px - 75px - 65px - 60px + 55px);
     overflow-y: scroll;
 }
 
@@ -622,16 +622,24 @@ input:checked + .slider:before {
 }
 
 .dialog .dialog-chat {
-    padding: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 2px;
     border-bottom: 1px solid rgba(102, 102, 111, 0.3);
+    box-shadow: inset 6px 6px 12px -6px rgba(0, 0, 0, .2);
 }
 
 .dialog .dialog-chat ul {
     list-style: none;
 }
 
-.dialog .dialog-chat ul li {
-    margin-bottom: 30px;
+.dialog .profile {
+    margin-top: 8px;
+}
+
+.dialog .dialog-chat ul .chat-messages li {
+    margin-bottom: 10px;
+    margin-right: 10px;
 }
 
 .dialog .dialog-chat .incoming {
@@ -653,7 +661,7 @@ input:checked + .slider:before {
 
 .chat-messages {
     overflow-y: scroll;
-    height: calc(100vh - 30px - 65px - 75px - 65px - 60px - 30px);
+    height: calc(100vh - 30px - 65px - 75px - 65px - 60px - 30px + 92px);
 }
 
 .dialog .dialog-chat .incoming .msg {
@@ -728,6 +736,7 @@ input:checked + .slider:before {
     grid-template-columns: 75px 1fr 50px 50px 75px;
     grid-template-rows: 115px;
     background: #fff;
+    box-shadow: inset 6px 0px 12px -6px rgba(0, 0, 0, .2);
 }
 
 .dialog .dialog-footer .send {
