--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -2,7 +2,7 @@
   grid-column: 1 / -1;
 
   background: #fff;
-  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid #e8e8e8;
   z-index: 5;
 }
 
