--- a/client/scss/pages/auth.scss
+++ b/client/scss/pages/auth.scss
@@ -100,10 +100,12 @@
   font-weight: 900;
   color: #fff;
   text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
 .auth__logo b {
   color: #db1623;
+  font-family: 'Roboto', sans-serif;
 }
 
 //
@@ -129,7 +131,7 @@
   border-radius: 0;
   background: #f0f0f0;
   font-weight: 700;
-  font-family: Roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-appearance: none;
 }
 
