--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,7 +1,8 @@
 @import
   'abstracts/vars',
   'abstracts/mixins',
-  'abstracts/functions';
+  'abstracts/functions',
+  'abstracts/keyframes';
 
 @import
   'vendors/normalize';
