Модальное окно создание беседы

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -21,7 +21,8 @@
 
 @import
   'components/buttons',
-  'components/inputs';
+  'components/inputs',
+  'components/modals';
 
 // @import
 //   'themes/colorful',
