--- a/client/scss/components/_buttons.scss
+++ b/client/scss/components/_buttons.scss
@@ -2,13 +2,13 @@
   display: inline-block;
   font-family: Rubik, sans-serif;
   font-size: 16px;
-  line-height: 15px;
+  line-height: 14px;
   font-weight: 500;
   min-width: 75px;
   min-height: 30px;
   border-radius: 50px;
   background: #f6f6fe;
-  color: #000;
+  color: #fff;
   text-decoration: none;
   padding: 10px 16px;
   text-align: center;
@@ -20,22 +20,21 @@
 }
 
 .button-accent {
-  background: main-colors('accent');
-  color: #000;
-  box-shadow: 0 10px 36px rgba(219, 22, 35, 0.25), 0 5px 25px 0 rgba(219, 22, 35, 0.45);
+  background: #1586fd;
+  color: #fff;
+  box-shadow: 0 10px 36px rgba(21, 134, 253, 0.25), 0 4px 24px 0 rgba(21, 134, 253, 0.45);
 }
 
 .button-big {
   font-size: 16px;
   font-weight: 500;
   width: 100%;
+  padding: 16px 30px;
 }
 
-.button-circle {
-  border-radius: 50%;
-  min-width: 50px;
-  height: 50px;
-  width: 50px;
+.button-solid {
+  background: #000;
+  box-shadow: none;
 }
 
 .burger-icon {
