--- a/client/scss/layout/_chat.scss
+++ b/client/scss/layout/_chat.scss
@@ -1,7 +1,7 @@
 .chat {
   grid-column: 4 / -1;
   display: grid;
-  grid-template: 8vh calc(92vh - 140px) 75px/1fr;
+  grid-template: 6vh calc(94vh - 140px) 75px/1fr;
   background: #f3f6f9;
 }
 
@@ -121,9 +121,8 @@
 .chat .chat__header {
   display: inline-grid;
   grid-template-columns: repeat(12, 1fr);
-  height: calc(8vh);
+  height: calc(6vh);
   position: relative;
-  padding-right: 30px;
   background: #fff;
   border-top: 1px solid #c5cfd9;
   border-right: 1px solid #c5cfd9;
@@ -133,18 +132,52 @@
 
 .chat .chat__header .message-search{
   grid-column-start: 6;  
-  grid-column-end: 12;
+  grid-column-end: 13;
 
   display: inline-grid;
   grid-template-columns: repeat(5, 1fr);
 }
 
 .chat-search__input{
+  display: block;
+  height: calc(4vh);
+  margin-top: calc(1vh); 
   grid-column-start: 1;
-  grid-column-end: 5;
-  border-radius: 5px;
+  grid-column-end: 4;
+  border-radius: 15px;
   float: right;
-  //display: none;
+}
+
+.chat-seach__run{
+  position: relative;
+  padding: 24px;
+  margin-top: 2px;
+  margin-left: 24px;
+  background:url(../img/search3.png) no-repeat;
+  border: none;
+
+  cursor: pointer; 
+}
+
+.chat-seach__end{
+  position: relative;
+  padding: 18px;
+  margin-top: 8px;
+
+  background:url(../img/button1.png) no-repeat;
+  border: none;
+
+  cursor: pointer; 
+}
+
+.chat-seach__run:hover{
+  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 1);
+  border-radius: 12px;
+}
+
+.chat-seach__end:hover{
+  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 1);
+  border-radius: 8px;
 }
 
 .chat__footer {
