--- a/client/scss/components/_modals.scss
+++ b/client/scss/components/_modals.scss
@@ -1,23 +1,23 @@
 .modal {
   display: none;
   position: fixed;
+  align-items: center;
+  justify-content: center;
   z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: auto;
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
 }
 
-
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 100%;
 }
 
 .close {
@@ -32,4 +32,8 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modal_conv .modal-content {
+  width: 400px;
 }
