Добавлены темные темы окон

--- a/client/scss/themes/dark-blue.scss
+++ b/client/scss/themes/dark-blue.scss
@@ -90,3 +90,12 @@
 .msg-box__input {
   color: #fff;
 }
+
+.modal {
+  background-color: rgba(14, 22, 33, 0.4);
+}
+
+.modal-content {
+  background-color: #101921;
+  border-color: #0e1621;
+}
