--- a/client/scss/themes/dark.scss
+++ b/client/scss/themes/dark.scss
@@ -90,3 +90,12 @@
 .msg-box__input {
   color: #fff;
 }
+
+.modal {
+  background-color: rgba(20, 20, 20, 0.4);
+}
+
+.modal-content {
+  background-color: #363636;
+  border-color: #2a292b;
+}
