--- a/client/scss/components/_modals.scss
+++ b/client/scss/components/_modals.scss
@@ -9,8 +9,7 @@
   width: 100%;
   height: 100vh;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
@@ -18,20 +17,6 @@
   padding: 20px;
   border: 1px solid #888;
   width: 100%;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
 
 .modal_conv .modal-content {
