Подключены шрифтовые иконки

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -5,7 +5,8 @@
   'abstracts/keyframes';
 
 @import
-  'vendors/normalize';
+  'vendors/normalize',
+  'vendors/fontawesome';
 
 @import
   'base/base',
