--- a/client/scss/layout/_header.scss
+++ b/client/scss/layout/_header.scss
@@ -31,7 +31,22 @@
 }
 
 .header-menu__logo {
-  color: #222;
-  font-size: 2.5rem;
-  font-weight: 900;
+  width: 150px;
+}
+
+.header-menu__logo img {
+  height: 50px;
+}
+
+.header-settings {
+  grid-column: 12 / -1;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.header-settings__link {
+  color: #fff;
+  cursor: pointer;
 }
