Внесены изменения для окна настроек
Co-authored-by: sk8bored <bakhmetyevgv@gmail.com>

--- a/client/scss/components/_modals.scss
+++ b/client/scss/components/_modals.scss
@@ -22,3 +22,17 @@
 .modal_conv .modal-content {
   width: 400px;
 }
+
+.modal_set .modal-content {
+  width: auto;
+}
+
+.settings__label {
+  color: #fff;
+  font-style: $font-stack;
+  font-weight: 500;
+}
+
+.setm-themes {
+  margin: 30px 0;
+}
