Обновлены цвета иконок у тем

--- a/client/scss/themes/dark-blue.scss
+++ b/client/scss/themes/dark-blue.scss
@@ -18,11 +18,17 @@
   background-color: #fff;
 }
 
+.header-settings__link {
+  color: #fff;
+}
+
 .sidebar,
 .chat__footer,
-.msg-box {
+.msg-box,
+.msg-box__input {
   background-color: #17212b;
 }
+
 
 .chat {
   background-color: #0e1621;
