--- a/client/scss/themes/dark.scss
+++ b/client/scss/themes/dark.scss
@@ -18,9 +18,14 @@
   background-color: #fff;
 }
 
+.header-settings__link {
+  color: #fff;
+}
+
 .sidebar,
 .chat__footer,
-.msg-box {
+.msg-box,
+.msg-box__input {
   background-color: #2a292b;
 }
 
