--- a/client/scss/components/_buttons.scss
+++ b/client/scss/components/_buttons.scss
@@ -38,6 +38,15 @@
   box-shadow: none;
 }
 
+.button-circle {
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  min-width: 45px;
+  line-height: 45px;
+  padding: 0;
+}
+
 .burger-icon {
   width: 25px;
   height: 20px;
@@ -50,7 +59,7 @@
   width: 100%;
   height: 4px;
   display: block;
-  background: #000;
+  background: #222;
   position: absolute;
   border-radius: 3px;
   transition: 0.3s cubic-bezier(0.8, 0.5, 0.2, 1.4);
