--- a/client/scss/components/_inputs.scss
+++ b/client/scss/components/_inputs.scss
@@ -23,7 +23,7 @@ input[type=search] {
   height: 35px;
   width: calc(100% - 60px);
   outline: none;
-  background: primary;
+  background: #fff;
   border: none;
   font-size: 0.9em;
   font-weight: 400;
