--- a/client/scss/layout/_chat.scss
+++ b/client/scss/layout/_chat.scss
@@ -171,9 +171,8 @@
   display: grid;
   align-items: center;
   justify-content: center;
-}
 
-.btn-box__icon img {
-  height: 23px;
-  object-fit: cover;
+  font-size: 24px;
+  text-decoration: none;
+  color: #9b9b9b;
 }
