--- a/client/scss/base/_fonts.scss
+++ b/client/scss/base/_fonts.scss
@@ -14,3 +14,5 @@
 
 @include font-face('Roboto', '../fonts/Roboto/Roboto-Black', 900, normal, ttf);
 @include font-face('Roboto', '../fonts/Roboto/Roboto-BlackItalic', 900, italic, ttf);
+
+@include font-face('EmojiOneColor', '../fonts/Emoji/EmojiOneColor', normal, normal, otf);
