Добавлена мобильная версия, изменена документация
Co-Authored-By: Nataly Klimova <tataklim@users.noreply.github.com>
Co-authored-by: sk8bored <bakhmetyevgv@gmail.com>

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -25,6 +25,10 @@
   'components/inputs',
   'components/modals';
 
+@import
+  'media/tablet',
+  'media/mobile';
+
 // @import
 //   'themes/colorful',
 //   'themes/dark';
