--- a/client/scss/layout/_sidebar.scss
+++ b/client/scss/layout/_sidebar.scss
@@ -11,6 +11,7 @@
 
 .sidebar_showed {
   display: grid;
+  z-index: 3;
 }
 
 .sidebar-search {
@@ -31,8 +32,37 @@
   overflow-y: scroll;
 }
 
+
+.dialogs-list::-webkit-scrollbar-track {
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    background: transparent;
+}
+
 .dialogs-list::-webkit-scrollbar {
-  width: 0;
+    width: 3px;
+    background: transparent;
+}
+
+.dialogs-list::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  box-shadow: none;
+  background: transparent;
+}
+
+.dialogs-list::-webkit-scrollbar-track {
+  border-radius: 0;
+  background: transparent;
+}
+
+.dialogs-list::-webkit-scrollbar {
+  width: 3px;
+  background: transparent;
+}
+
+.dialogs-list::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background: #1586fd;
 }
 
 .dialogs-list__dlg {
